test/libhyperion/syntaxTests/viewPureChecker/msg_value_modifier.hyp
contract C {
    modifier m(uint _amount, uint _avail) { require(_avail >= _amount); _; }
    function f() m(1 quanta, msg.value) public pure {}
}
// ----
// TypeError 2527: (119-128): Function declared as pure, but this expression (potentially) reads from the environment or state and thus requires "view".
